samples/_failures_safe/1761796765_660372_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5ee046a.c: In function ‘main’:
./samples/SAFE/__tmp_f5ee046a.c:171:28: error: missing terminating " character
  171 |                     printf("Original size: %
      |                            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f5ee046a.c:171:21: error: expected expression at end of input
  171 |                     printf("Original size: %
      |                     ^~~~~~
./samples/SAFE/__tmp_f5ee046a.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5ee046a.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5ee046a.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5ee046a.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5ee046a.c:171:21: error: expected declaration or statement at end of input
